# docmngr

./: README.md  manage.py  pyproject.toml  pytest.ini  requirements.txt  seed.sh
docmngr/: asgi.py  conftest.py  models.py  settings.py  urls.py  views.py  wsgi.py
docmngr/migrations/: 0001_initial.py  0002_alter_folder_parent_folder.py  0003_alter_folder_parent_folder.py  0004_folder_is_deleted.py  0005_document_folder.py  0006_document_is_deleted.py  0007_topic.py  0008_alter_topic_name.py  0009_folder_unique within parent.py
docmngr/tests/: test_views.py
